--- a/paper-kit-react-main/package.json
+++ b/paper-kit-react-main/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "5.2.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.0",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "jquery": "3.6.0",
+    "typescript": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
